# serde-millis

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  vagga.yaml
src/: funcs.rs  impls.rs  lib.rs  traits.rs
src/impls/: chrono.rs  time.rs
